# LoggerV2

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Dockerfile.clang  Dockerfile.gcc  Jenkinsfile  sonar-project.properties  sonarcloud.properties  sonarqube.properties
docs/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt
src/LoggerV2/: .gitignore  CMakeLists.txt  Client.cpp  Client.hpp  CustomSourceLocation.hpp  Flags.cpp  Flags.hpp  Log.cpp  Log.hpp  LogFuncs.inc  LogMetaFuncs.inc  LogMetaMetaFuncs.inc  SendTrace.inc  Telemetry.cpp  Telemetry.hpp  source_location.h  str_const.hpp
test/: CMakeLists.txt  main_test.cpp
test/Logging/: CMakeLists.txt  Log_test.cpp
